# creature-listener

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_deb.sh  download_models.sh  run_local.sh
.github/workflows/: debian-package.yml
debian/: changelog  control  creature-listener.dirs  creature-listener.env.example  creature-listener.install  creature-listener.links  creature-listener.service  creature-listener.yaml  rules
src/: Version.h.in  main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h  VoiceActivityDetector.cpp  VoiceActivityDetector.h
src/config/: CommandLine.cpp  CommandLine.h  ConfigFile.cpp  ConfigFile.h  Configuration.h
src/homeassistant/: HomeAssistantClient.cpp  HomeAssistantClient.h
src/llm/: ConversationHistory.cpp  ConversationHistory.h  LLMClient.cpp  LLMClient.h
src/server/: CreatureServerClient.cpp  CreatureServerClient.h
src/stt/: SpeechToText.cpp  SpeechToText.h
src/trace/: Trace.cpp  Trace.h
src/util/: namespace-stuffs.h  utf8.cpp  utf8.h
src/wakeword/: WakeWordDetector.cpp  WakeWordDetector.h
